# ACUnstructured

./: .gitignore  Dockerfile  docker-compose.yml
api/: README.md  extract.py  main.py  pyproject.toml
